k8s/apps/ingressroute-argo.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.synit.top`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argo-insecure
  tls:
    secretName: argo-origin-tls # Origin Cert (role Ansible `tls`), nunca commitado
